Adding the landing pages and a few system files

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,2 +1,4 @@
-patientlist.title=Patient List
+patientlist.title=Patient List Module
 patientlist.refapp.title=Patient List Reference Application
+patientlist.admin.patientList=Manage Patient List
+patientlist.page=Patient List
