Adding a few changes

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -2,3 +2,5 @@ patientlist.title=Patient List Module
 patientlist.refapp.title=Patient List Reference Application
 patientlist.admin.patientList=Manage Patient List
 patientlist.page=Patient List
+patientlist.manage.label=Manage Patient List
+patientlist.define.label=Define Patient List
