Adding the files on the addition of the page

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -4,3 +4,6 @@ patientlist.admin.patientList=Manage Patient List
 patientlist.page=Patient List
 patientlist.manage.label=Manage Patient List
 patientlist.define.label=Define Patient List
+patientlist.define.new.label=New Patient List
+patientlist.notFound=No Patient List Found
+patientlist.enterSearchPhrase=Enter Patient List name to search
