--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -7,3 +7,8 @@ patientlist.define.label=Define Patient List
 patientlist.define.new.label=New Patient List
 patientlist.notFound=No Patient List Found
 patientlist.enterSearchPhrase=Enter Patient List name to search
+patientlist.condition.list.header=Patient List Condition
+patientlist.condition.feild.label=Label
+patientlist.condition.operator.label=Operator
+patientlist.condition.value.label=Value
+patientlist.condition.consitionorder.label=Condition Order
