The patient conditions

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -8,7 +8,7 @@ patientlist.define.new.label=New Patient List
 patientlist.notFound=No Patient List Found
 patientlist.enterSearchPhrase=Enter Patient List name to search
 patientlist.condition.list.header=Patient List Condition
-patientlist.condition.feild.label=Label
+patientlist.condition.feild.label=Field
 patientlist.condition.operator.label=Operator
 patientlist.condition.value.label=Value
 patientlist.condition.consitionorder.label=Condition Order
