Adding single conditions and sort order

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -12,3 +12,5 @@ patientlist.condition.feild.label=Field
 patientlist.condition.operator.label=Operator
 patientlist.condition.value.label=Value
 patientlist.condition.consitionorder.label=Condition Order
+patientlist.sort.order.feild.label=Field
+patientlist.sort.order.sortOrder.label=Sort Order
