fixed the saving add editing of the display templates

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -14,3 +14,5 @@ patientlist.condition.value.label=Value
 patientlist.condition.consitionorder.label=Condition Order
 patientlist.sort.order.feild.label=Field
 patientlist.sort.order.sortOrder.label=Sort Order
+patientlist.display.template.header.label=Display Template Header
+patientlist.display.template.body.label=Display Template Body
