Adding messages and minor changes

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -17,3 +17,4 @@ patientlist.display.template.header.label=Display Template Header
 patientlist.display.template.body.label=Display Template Body
 patientlist.sort.order.header=Patient List Ordering
 patientlist.display.template.header=Display Template
+patientlist.list.condition.removeTitle=Remove Condition from List
