Fixed the patient list field loading & line items

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -2,7 +2,7 @@ patientlist.title=Patient List Module
 patientlist.refapp.title=Patient List Reference Application
 patientlist.admin.patientList=Manage Patient List
 patientlist.page=Patient List
-patientlist.manage.label=Manage Patient List
+patientlist.manage.label=Manage Patient Lists
 patientlist.define.label=Define Patient List
 patientlist.define.new.label=New Patient List
 patientlist.notFound=No Patient List Found
@@ -19,3 +19,5 @@ patientlist.sort.order.header=Patient List Ordering
 patientlist.display.template.header=Display Template
 patientlist.list.condition.removeTitle=Remove Condition from List
 patientlist.view.patientDetails=Patient Details
+patientlist.list.condition.error.invalidCondition=Invalid List Condition
+patientlist.condition.chooseConditionErrorMessage=A Patient List should contain at least one condition.
