Adding the multiple list ordering addition feature & fixing the list condition value input change

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -21,3 +21,4 @@ patientlist.list.condition.removeTitle=Remove Condition from List
 patientlist.view.patientDetails=Patient Details
 patientlist.list.condition.error.invalidCondition=Invalid List Condition
 patientlist.condition.chooseConditionErrorMessage=A Patient List should contain at least one condition.
+patientlist.list.ordering.removeTitle=Remove Ordering from the List
