--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -22,3 +22,4 @@ patientlist.view.patientDetails=Patient Details
 patientlist.list.condition.error.invalidCondition=Invalid List Condition
 patientlist.condition.chooseConditionErrorMessage=A Patient List should contain at least one condition.
 patientlist.list.ordering.removeTitle=Remove Ordering from the List
+patientlist.list.enterConceptName=Enter Concept Name
