Patient list Unit Tests + minor UI fixes

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -23,3 +23,4 @@ patientlist.list.condition.error.invalidCondition=Invalid List Condition
 patientlist.condition.chooseConditionErrorMessage=A Patient List should contain at least one condition.
 patientlist.list.ordering.removeTitle=Remove Ordering from the List
 patientlist.list.enterConceptName=Enter Concept Name
+patientlist.list.empty=This Patient List is empty
