Format visit start date

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -24,3 +24,4 @@ patientlist.condition.chooseConditionErrorMessage=A Patient List should contain 
 patientlist.list.ordering.removeTitle=Remove Ordering from the List
 patientlist.list.enterConceptName=Enter Concept Name
 patientlist.list.empty=This Patient List is empty
+patientlist.list.none=No Patient Lists created
