--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -26,3 +26,4 @@ patientlist.list.enterConceptName=Enter Concept Name
 patientlist.list.empty=This Patient List is empty
 patientlist.list.none=No Patient Lists created
 patientlist.lists.notFound=No Patient List was found
+patientlist.live.preview.header=Live Preview Display
