--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -27,3 +27,10 @@ patientlist.list.empty=This Patient List is empty
 patientlist.list.none=No Patient Lists created
 patientlist.lists.notFound=No Patient List was found
 patientlist.live.preview.header=Live Preview Display
+patientlist.name.error=Name required
+patientlist.list.condition.error=You are required to input at least one patient list condition
+patientlist.list.condition.field.error=Condition field required
+patientlist.list.condition.operator.error=Condition operator required
+patientlist.list.sort.order.field.error=Sort Order field required
+
+
