Minor fixes after the demo

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -7,7 +7,7 @@ patientlist.define.label=Define Patient List
 patientlist.define.new.label=New Patient List
 patientlist.notFound=No Patient List Found
 patientlist.enterSearchPhrase=Enter Patient List name to search
-patientlist.condition.list.header=Patient List Condition
+patientlist.condition.list.header=List Condition
 patientlist.condition.field.label=Field
 patientlist.condition.operator.label=Operator
 patientlist.condition.value.label=Value
@@ -15,7 +15,7 @@ patientlist.sort.order.field.label=Field
 patientlist.sort.order.sortOrder.label=Sort Order
 patientlist.display.template.header.label=Display Template Header
 patientlist.display.template.body.label=Display Template Body
-patientlist.sort.order.header=Patient List Ordering
+patientlist.sort.order.header=List Ordering
 patientlist.display.template.header=Display Template
 patientlist.list.condition.removeTitle=Remove Condition from List
 patientlist.view.patientDetails=Patient Details
@@ -25,7 +25,7 @@ patientlist.list.ordering.removeTitle=Remove Ordering from the List
 patientlist.list.enterConceptName=Enter Concept Name
 patientlist.list.empty=This Patient List is empty
 patientlist.list.none=No Patient Lists created
-patientlist.lists.notFound=No Patient List was found
+patientlist.lists.notFound=No Patient Lists were found
 patientlist.live.preview.header=Live Preview Display
 patientlist.name.error=Name required
 patientlist.list.condition.error=You are required to input at least one patient list condition
