--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,36 +1,1 @@
-patientlist.title=Patient List Module
-patientlist.refapp.title=Patient List Reference Application
-patientlist.admin.patientList=Manage Patient List
-patientlist.page=Patient List
-patientlist.manage.label=Manage Patient Lists
-patientlist.define.label=Define Patient List
-patientlist.define.new.label=New Patient List
-patientlist.notFound=No Patient List Found
-patientlist.enterSearchPhrase=Enter Patient List name to search
-patientlist.condition.list.header=List Condition
-patientlist.condition.field.label=Field
-patientlist.condition.operator.label=Operator
-patientlist.condition.value.label=Value
-patientlist.sort.order.field.label=Field
-patientlist.sort.order.sortOrder.label=Sort Order
-patientlist.display.template.header.label=Display Template Header
-patientlist.display.template.body.label=Display Template Body
-patientlist.sort.order.header=List Ordering
-patientlist.display.template.header=Display Template
-patientlist.list.condition.removeTitle=Remove Condition from List
-patientlist.view.patientDetails=Patient Details
-patientlist.list.condition.error.invalidCondition=Invalid List Condition
-patientlist.condition.chooseConditionErrorMessage=A Patient List should contain at least one condition.
-patientlist.list.ordering.removeTitle=Remove Ordering from the List
-patientlist.list.enterConceptName=Enter Concept Name
-patientlist.list.empty=This Patient List is empty
-patientlist.list.none=No Patient Lists created
-patientlist.lists.notFound=No Patient Lists were found
-patientlist.live.preview.header=Live Preview Display
-patientlist.name.error=Name required
-patientlist.list.condition.error=You are required to input at least one patient list condition
-patientlist.list.condition.field.error=Condition field required
-patientlist.list.condition.operator.error=Condition operator required
-patientlist.list.sort.order.field.error=Sort Order field required
-
-
+customrestservices.title=Custom REST services
